[package]
name = "psql_connect"
version = "0.1.0"
authors = ["Ryan B <notryanb@gmail.com>"]
description = "A CLI tool to help logging into Postgres easier"
keywords = ["postgres", "psql", "cli"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/notryanb/psql_connect"
repository = "https://github.com/notryanb/psql_connect"
readme = "README.md"

[dependencies]
clap = "~2.31"
error-chain = "~0.11.0"
